Removed unused OutputBufferFactory from IEglContext